src/coolcmp/unit_tests/Semantics/success/good.cl
class A {
 f: Int;
};

Class BB__ inherits A {
};

class Main {
	main() : Int {
		1
	};
};