src/coolcmp/unit_tests/Semantics/fail/all-types-builtin-and-complex.cl
class Main inherits Object {
    a: Int;
    b: String;
    c: Object;
    d: Bool;
    e: IO;
    f: Complex;
};
